--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -3,6 +3,6 @@
   <a href="{{- '/' | absolute_url -}}" id="home-link">
     <span class="image avatar48"><img src="{{- site.avatar | relative_url -}}" alt="{{- site.author | default: 'unknown author' | prepend: 'Avatar of ' -}}" height="500" width="500"/></span>
     <h1 id="title">{{- site.title -}}</h1>
-    <p>{{- site.subtitle -}}</p>
+    <!-- <p>{{- site.subtitle -}}</p> -->
   </a>
 </div>
