--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,7 +1,7 @@
 <!-- Logo -->
 <div id="logo">
   <a href="{{- '/' | absolute_url -}}" id="home-link">
-    <span class="image avatar48"><img src="{{- site.avatar | relative_url -}}" alt="{{- site.author | default: 'unknown author' | prepend: 'Avatar of ' -}}" height="500" width="500"/></span>
+    <span class="image avatar48"><img src="{{- site.avatar | relative_url -}}" height="500" width="500" alt="{{- site.author | default: 'unknown author' | prepend: 'Avatar of ' -}}" /></span>
     <h1 id="title">{{- site.title -}}</h1>
     <!-- <p>{{- site.subtitle -}}</p> -->
   </a>
